--- a/Portfolio-website/index.html
+++ b/Portfolio-website/index.html
@@ -16,7 +16,24 @@
     <title>Rossy</title>
 </head>
 <body>
+
     <header id="titleMenu">
+        <nav>
+            <div id="logo-ctn">
+                <h2>Rossy</h2>
+            </div>
+            <ul class="mainMenu" id="mainMenu">
+                <li><a href="#home">HOME</a></li>
+                <li><a href="#about">ABOUT</a></li>
+                <li><a href="#projects">PROJECTS</a></li>
+                <li><a href="#contact">CONTACT</a></li>
+            </ul>
+            <div class="menuToggle" id="menuToggle">
+                <i class="fas fa-bars fa-2x"></i>
+            </div>
+        </nav>
+    </header>
+    <!-- <header id="titleMenu">
         <nav>
             <div id="logo-ctn">
                 <h2>Rossy</h2>
@@ -31,16 +48,16 @@
                 <li><a href="#contact">CONTACT</a></li>
             </ul>
         </nav>
-    </header>
+    </header> -->
     <main>
         <!-- Home Section -->
         <section id="home">
             <div class="home-content">
                 <div class="intro-text">
-                    <h1>Hey, I'm Chinenye</h1>
-                    <p class="intro-body">A passionate web developer
-                        with a knack for turning<br>
-                        ideas into digital reality.
+                    <!-- <h1>Hey, I'm Chinenye</h1> -->
+                    <p class="intro-body">Transitioning to a new career as a full stack developer has been both challenging and rewardingas it requires mastering a diverse set of skills.
+                        <br/>From frontend technologies like React to backend frameworks like Django,
+                        while continuously learning and adapting to the ever-evolving landscape of web development.
                     </p>
                 </div>
                 <div class="img-ctn">
@@ -71,6 +88,12 @@
             <h1>Projects</h1>
             <div id="projects-list">
                 <div class="project">
+                    <div><a href="https://github.com/ajenechinenyerosemary/Carssy-Delivery-food-App.git/" target="_blank">Carssy-Delivery-food-App</a></div>
+                </div>
+                <div class="project">
+                    <div><a href="https://github.com/VictorOkpare/Quicklift2.git/" target="_blank">Quicklift2</a></div>
+                </div>
+                <div class="project">
                     <div><a href="https://github.com/ajenechinenyerosemary/Todo-list.git" target="_blank">Todo List</a></div>
                 </div>
                 <div class="project">
@@ -84,9 +107,9 @@
         <hr>
         <!-- Contact Section -->
         <section id="contact">
-            <h1>Let's collaborate and build something extraordinary together!</h1>
+            <h1><span class="specialText">Contact </span> us</h1>
             <div id="contact-form">
-                <h3><span class="specialText">Contact</span> Me</h3>
+                <h3>Let's collaborate and build something extraordinary together!</h3>
                 <p>Please fill out the form below to contact us</p>
                 <form action="">
                     <div class="input-control">
