--- a/Portfolio-website/index.html
+++ b/Portfolio-website/index.html
@@ -38,7 +38,7 @@
         <section id="home">
             <div class="home-content">
                 <div class="intro-text">
-                    <p class="intro-body">Transitioning to a new career as a full stack developer has been both challenging and rewardingas it requires mastering a diverse set of skills.
+                    <p class="intro-body">Transitioning to a new career as a full stack developer has been both challenging and rewarding as it requires mastering a diverse set of skills.
                         <br/>From frontend technologies like React to backend frameworks like Django,
                         while continuously learning and adapting to the ever-evolving landscape of web development.
                     </p>
@@ -69,7 +69,7 @@
             <h1>Projects</h1>
             <div id="projects-list">
                 <div class="project">
-                    <div><a href="https://github.com/ajenechinenyerosemary/Carssy-Delivery-food-App.git/" target="_blank">Carssy-Delivery-food-App</a></div>
+                    <div><a href="https://github.com/ajenechinenyerosemary/CarssyDelivery-food-App.git/" target="_blank">CarssyDelivery-food-App</a></div>
                 </div>
                 <div class="project">
                     <div><a href="https://github.com/VictorOkpare/Quicklift2.git/" target="_blank">Quicklift2</a></div>
